# ByteBeta

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  TECHNICAL_REFERENCE.md  _frontend_serve.py  benchmark.py  bootstrap-dev.ps1  bootstrap-dev.sh  byte_aliases.json  demo.html  docker-compose.yml  mypy.ini  pyproject.toml  railway.toml  ruff.toml  start.ps1  tox.ini
.github/: CODEOWNERS
.github/workflows/: ci.yml
byte/: __init__.py  _config_runtime.py  _config_runtime_support.py  _config_sections.py  _core_lifecycle.py  _core_memory.py  _core_memory_execution.py  _core_memory_interactions.py  _core_memory_optimization.py  _core_memory_patterns.py  _core_memory_reasoning.py  _core_memory_snapshot.py  _core_memory_tools.py  _optional_features.py  cli.py  client.py  config.py  core.py  mcp_gateway.py  report.py  security.py  session.py  telemetry.py
byte/_backends/: __init__.py  _openai_chat.py  _openai_media.py  _openai_response.py  _openai_support.py  _openai_transport.py  anthropic.py  bedrock.py  cohere.py  deepseek.py  gemini.py  gemini_audio.py  gemini_chat.py  gemini_clients.py  gemini_images.py  gemini_messages.py  gemini_responses.py  groq.py  http_transport.py  huggingface.py  llama_cpp.py  mistral.py  ollama.py  openai.py  openrouter.py
byte/_devtools/: __init__.py  _repo_python.py  bootstrap_dev.py  check_annotation_contract.py  check_benchmark_claims.py  check_dependency_policy.py  check_devx_contract.py  check_install_parity.py  check_locks.py  check_maintainability_contract.py  check_package_artifacts.py  check_repo_hygiene.py  check_trust_calibration.py  compile_check.py  refresh_locks.py  run_coverage.py  run_integration_smoke.py  run_lint.py  run_optional_feature_tests.py  run_security_checks.py  run_tox.py  run_typecheck.py  run_unit_tests.py  run_with_repo_python.py  verification_targets.py
byte/_testing/: __init__.py  integration_support.py  optional_deps.py
byte/adapter/: __init__.py  _api_capabilities.py  _api_init.py  _api_memory.py  _api_runtime.py  _api_support.py  _provider_wrapper.py  _router_attempts.py  _router_dispatch.py  _router_execution.py  _router_registry.py  _router_resolution.py  _router_selection.py  _runtime_async.py  _runtime_memory.py  _runtime_response.py  _runtime_support.py  _runtime_sync.py  _runtime_verification.py  adapter.py  anthropic.py  api.py  base.py  bedrock.py  client_pool.py  cohere.py  deepseek.py  gemini.py  groq.py  huggingface.py  langchain_models.py  llama_cpp.py  mistral.py  ollama.py  openai.py  openrouter.py  prompt_cache_bridge.py  router_runtime.py  runtime.py  runtime_state.py  (+1 more)
byte/benchmarking/: __init__.py  _metrics_intervals.py  _metrics_summary.py  _optional_runtime.py  _plan_loader.py  _program_common.py  _program_defaults.py  _program_entry.py  _program_execution.py  _program_models.py  _runner_gates.py  _runner_reporting.py  _systems_support.py  _workload_support.py  contracts.py  corpus.py  integrity.py  metrics.py  quickstart.py  reporting.py  runner.py  scoring.py  systems.py  workload_generator.py
byte/embedding/: __init__.py  base.py  cohere.py  data2vec.py  fasttext.py  huggingface.py  langchain.py  onnx.py  openai.py  paddlenlp.py  rwkv.py  sbert.py  string.py  timm.py  uform.py  vit.py
byte/h2o/: __init__.py  _runtime_common.py  _runtime_decode.py  _runtime_engine.py  _runtime_factory.py  _runtime_generation.py  _runtime_kv.py  (+4 more)
byte_inference/: __init__.py  server.py
byte_memory/: __init__.py  server.py
byte_server/: _control_plane.py  _control_plane_routing.py  _control_plane_runtime.py  _control_plane_scope.py  _control_plane_store.py  _control_plane_store_common.py  _control_plane_store_events.py  _control_plane_store_schema.py  _control_plane_store_settings.py  _control_plane_store_workers.py  _operator_manifest.py  _operator_reconcile.py  _server_gateway.py  _server_lifespan.py  _server_routes_cache.py  _server_routes_chat.py  _server_routes_control.py  _server_routes_mcp.py  _server_routes_proxy.py  _server_security.py  _server_security_audit.py  _server_security_auth.py  _server_security_metrics.py  _server_security_middleware.py  _server_security_validation.py  _server_state.py  limits.py  models.py  operator.py  server.py  telemetry.py
docs/: .readthedocs.yaml  architecture.md  benchmark-architecture.md  code-validation.md  conf.py  configure_it.md  control-plane.md  deployment_guide.md  environment-reference.md  feature.md  horizontal-scaling-usage.md  index.rst  inference-worker.md  kubernetes-operator.md  maintainability-contract.md  mcp-gateway.md  memory-service.md  observability.md  operator-runbook.md  provider_matrix.md  release_note.md  reproducibility.md  requirements.txt  route-auth-matrix.md  security_readiness.md  service-topology.md  support-tiers.md  toc.rst  trust-calibration.md  usage.md
examples/: README.md
requirements/: dev-ci.txt  security-ci.txt
scripts/: advanced_openai_cost_patterns.py  benchmark_suite.py  bootstrap_dev.py  check_annotation_contract.py  check_benchmark_claims.py  check_dependency_policy.py  check_devx_contract.py  check_install_parity.py  check_locks.py  check_maintainability_contract.py  check_package_artifacts.py  check_repo_hygiene.py  check_trust_calibration.py  compile_check.py  deep_deepseek_reasoning_reuse_benchmark.py  deep_deepseek_runtime_optimization_benchmark.py  deep_multi_provider_routing_memory.py  deep_openai_1000_request_mixed_benchmark.py  deep_openai_100_request_mixed_benchmark.py  deep_openai_coding_benchmark.py  deep_openai_comprehensive_workload_benchmark.py  deep_openai_cost_levers.py  deep_openai_prompt_stress_benchmark.py  deep_openai_surface_benchmark.py  deep_openai_unified_router_benchmark.py  gemini_practical_routing_memory.py  live_openai_vs_byte.py  refresh_locks.py  run_coverage.py  run_integration_smoke.py  run_lint.py  run_optional_feature_tests.py  run_security_checks.py  run_tox.py  run_typecheck.py  run_unit_tests.py  run_with_repo_python.py  stress_openai_vs_byte.py
tests/: conftest.py
(+450 files in other folders)
